Fix wrapping of days

--- a/css/theme.css
+++ b/css/theme.css
@@ -106,7 +106,7 @@ a:hover {
 
 .days {
 
-    width: 5ch;
+    width: 6ch;
 
 }
 
